<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="book"
            type="com.github.mariemmezghani.bookfinder.database.Book" />

        <variable
            name="viewModel"
            type="com.github.mariemmezghani.bookfinder.viewModel.BookViewModel" />
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
         android:layout_height="match_parent">
        <!-- Using ConstraintLayout because it is better than using nested Linear Layouts -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half">

            <TextView
                android:id="@+id/book_name_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/book_name_string"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/rubik_light"
                android:hint="@string/book_name_edittext"
                android:inputType="textPersonName"
                android:text="@={book.name}"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_name_textview" />

            <TextView
                android:id="@+id/author_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/author_string"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_book" />

            <EditText
                android:id="@+id/author_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/rubik_light"
                android:hint="@string/author_edittext"
                android:inputType="textPersonName"
                android:text="@={book.author}"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_textview" />

            <TextView
                android:id="@+id/published_date_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/published_date_text"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_edittext" />

            <EditText
                android:id="@+id/published_date_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:fontFamily="@font/rubik_light"
                android:hint="@string/published_date_string"
                android:inputType="date"
                android:text="@={book.publishedDate}"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/published_date_textview" />

            <TextView
                android:id="@+id/status_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/status_string"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/published_date_edittext" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_textview">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={book.read}"
                    android:fontFamily="@font/rubik_light"
                    android:paddingRight="@dimen/margin_half"
                    android:text="@string/read"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={book.unread}"
                    android:fontFamily="@font/rubik_light"
                    android:paddingEnd="@dimen/margin_half"
                    android:text="@string/unread"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={book.inProgress}"
                    android:fontFamily="@font/rubik_light"
                    android:paddingRight="@dimen/margin_half"
                    android:text="@string/in_progress"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RadioGroup>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_half"
                android:layout_marginTop="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_half"
                android:background="@drawable/round_button_rot"
                android:fontFamily="@font/rubik_medium"
                android:onClick="@{()-> viewModel.onCancel()}"
                android:text="@string/cancel_button"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/save_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_half"
                android:layout_marginTop="@dimen/margin_wide"
                android:layout_marginEnd="@dimen/margin_half"
                android:background="@drawable/round_button_green"
                android:fontFamily="@font/rubik_medium"
                android:onClick="@{() -> viewModel.onSaveBook(book)}"
                android:text="@string/save_button"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9626425516337123~9890152448">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
</layout>